Closed Bug 213974 Opened 23 years ago Closed 23 years ago

too much checkbox in subscribe window

Categories

(SeaMonkey :: MailNews: Message Display, defect)

x86
Linux
defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.5beta

People

(Reporter: karpieszuk, Assigned: sspitzer)

Details

(Keywords: regression)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; pl-PL; rv:1.5a) Gecko/20030718 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; pl-PL; rv:1.5a) Gecko/20030718 In a window of subscribe i have too much checkbox to subscribe. I will show this in attachment in next letter. Reproducible: Always Steps to Reproduce: 1. Choose news server and "Subscribe to newsgroup" 2. Type some letter from name of group which interests You (in exmpl. 'pl.comp.ma' to subscribe pl.comp.mail Actual Results: We have only two groups (pl.comp.mail and pl.comp.mail.mta) but much more checkboxes This bug maybe depend on bug 192437 (please verify) I see that this bug was absent in Mozilla 1.4 but it is also in Thunderbird
Attached image how looks this problem
confirmed with linux trunk 20030725 this regressed between linux trunk 2003063005 and 2003070107, probably bug 208093 debug build doesn't show the checkboxes, but still shows a scrollbar when it isn't needed. it also asserts. ###!!! ASSERTION: row count did not change by the amount suggested, check caller: 'rowCount == mRowCount', file nsTreeBodyFrame.cpp, line 1727 ###!!! ASSERTION: row count changed unexpectedly: 'mRowCount == rowCount', file nsTreeBodyFrame.cpp, line 2198 ==> XP/Trees
Assignee: sspitzer → varga
Status: UNCONFIRMED → NEW
Component: Subscribe → XP Toolkit/Widgets: Trees
Ever confirmed: true
Keywords: regression
Product: MailNews → Browser
QA Contact: stephend → shrir
Attached patch Proposed patchSplinter Review
Seth, you didn't fix bug 111321 correctly - you subtracted the two variables the wrong way around. Otherwise, that would have been the correct fix for bug 92621 in the first place. But this fix uses the new batch system to accurately reflect what's really going on here.
Attachment #128679 - Flags: superreview?(sspitzer)
Attachment #128679 - Flags: review?(varga)
Back to News.
Assignee: varga → sspitzer
Component: XP Toolkit/Widgets: Trees → Subscribe
Product: Browser → MailNews
QA Contact: shrir → stephend
Target Milestone: --- → mozilla1.5beta
Comment on attachment 128679 [details] [diff] [review] Proposed patch r=varga
Attachment #128679 - Flags: review?(varga) → review+
Comment on attachment 128679 [details] [diff] [review] Proposed patch sr=bienvenu
Attachment #128679 - Flags: superreview?(sspitzer) → superreview+
Fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Verified fixed - I just pulled from CVS and built. news.verizon.net with pl.comp.m doesn't exibit the problem on my Windows 2000 box.
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
Component: MailNews: Subscribe → MailNews: Message Display
QA Contact: stephend → search
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: