Bug 213974 too many checkboxes in subscribe window r=varga sr=bienvenu